Thu May 17 13:36:33 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * config/global.mpb:

          Don't add '.' to libpaths for automake.  It isn't necessary.

        * docs/README:

          Modified *_pre_extension descriptions to be consistent with the
          *_pre_filename descriptions.

        * modules/TemplateParser.pm:

          Provide warnings when templates use the scope function
          incorrectly.

Tue May 15 19:05:59 2007  Steve Huston  <shuston@riverace.com>

        * templates/vc8platforms.mpt: Added iphlpapi.lib to the lit_libs for
          Windows Mobile 5.0 Smartphone SDK (ARMV4I) to pick up
          GetAdaptersAddresses.

Thu May 10 05:13:56 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * templates/vc7.mpd:

          Somehow the UseOfATL was missing a endif statement.

Wed May  9 19:16:24 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/templates/vc7.txt:
        * templates/vc7.mpd:

          Added support to configuring the usage of Active Template
          Library (ATL) in vc7 projects. It uses the template variable
          UseOfATL.

Wed Apr 18 09:27:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/qt.mpb:
          Added custom QRC. Thanks to Roland Sun <rolandsun at gmail dot com>
          for delivering the patch. This is part of bugzilla 2870

Mon Apr 16 15:00:49 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeProjectCreator.pm:
        * modules/ProjectCreator.pm:
        * templates/make.mpd:
        * templates/makedll.mpt:

          Added support for using gcj with the 'java' language type.

Thu Apr  5 19:09:47 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Fixed a bug where $() vars that appeared after other $() vars
          would not be expanded with template values.

          Also, added a performance enhancement when replacing $() vars.
